--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -2,6 +2,13 @@
 
 {% block head %}
     {{ super() }}
+    <style>
+    @media only screen and (max-width: 640px) {
+        .book-header .hidden-mobile {
+            display: none;
+        }
+    }
+    </style>
     <script>
         window["gitbook-plugin-github-buttons"] = {{ config.pluginsConfig['github-buttons']|dump|safe }};
     </script>
